[tool.poetry]
name = "redisplus"
version = "0.0.1"
description = "An all purpose client for redis modules."
keywords = ["redis"]
authors = ["RedisLabs OSS <oss@redislabs.com>"]
license = "BSD-3-Clause"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 3 - Alpha',
]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"

redisearch = {version = "^2.0.0", optional = true}
rejson = {version = "^0.5.4", optional = true}
redisai = {version = "^1.0.2", optional = true}
redisgraph = {version = "^2.4.0", optional = true}
redistimeseries = {version = "^1.4.3", optional = true}
redisbloom = {version = "^0.4.0", optional = true}
redis = {git = "https://github.com/chayim/redis-py", rev = "ck-commandmig"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
bandit = "^1.7.0"
vulture = "^2.3"
tox = "^3.24.0"
tox-poetry = "^0.4.0"
pytest = "^6.2.0"
# flake8-docstrings = "^1.6.0"
mock = "^4.0.3"
black = "^21.7b0"
tox-docker = "^3.0.0"
tox-pyenv = "^1.1.0"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
readthedocs-sphinx-search = "^0.1.0"
toml = "^0.10.2"
sphinx-automodapi = "^0.13"
invoke = "^1.6.0"

[tool.poetry.extras]
#redisearch = ["redisearch"]
#rejson = ["rejson"]
#redistimeseries = ["redistimeseries"]
#redisgraph = ["redisgraph"]
#redisai = ["redisai"]
#redisbloom = ["redisbloom"]
#redismodules = ["redisai", "redisgraph", "redistimeseries", "redisearch", "rejson", "redisbloom"]
docs = ["sphinx", "sphinx-rtd-theme", "readthedocs-sphinx-search", "sphinx-automodapi", "toml"]

[tool.pytest.ini_options]
markers = [
    "redisearch: only redisearch tests",
    "redisjson: only redisjson tests",
    "redistimeseries: only redistimeseries tests",
    "redisbloom: only redisbloom tests",
    "redissearch: only redisearch tests",
    "unmarked: tests that are not limited to a specific module",

    "integrations: run integration tests against a redis docker",
    "pipeline: run only tests with a pipeline"
]

[tool.poetry.urls]
Repository = "https://github.com/redislabsmodules/redisplus-py"
Documentation = "https://redisplus.readhtedocs.io"

[[tool.mypy.overrides]]
module = [
    "src",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
